--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(lldb) Launch Test",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceRoot}/App",
+            "program": "${workspaceRoot}/bin/Manager",
             "args": [
                 "1"
             ],
