--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,11 +33,11 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "gdb",
+            "MIMode": "lldb",
             "preLaunchTask": "Build Manager",
             "setupCommands": [
                 {
-                    "description": "Enable pretty-printing for gdb",
+                    "description": "Enable pretty-printing for lldb",
                     "text": "settings set target.run-args",
                     "ignoreFailures": true
                 }
