--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,17 +27,17 @@
             "request": "launch",
             "program": "${workspaceFolder}/bin/Manager",
             "args": [
-                "2"
+                "3"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "lldb",
+            "MIMode": "gdb",
             "preLaunchTask": "Build Manager",
             "setupCommands": [
                 {
-                    "description": "Enable pretty-printing for lldb",
+                    "description": "Enable pretty-printing for gdb",
                     "text": "settings set target.run-args",
                     "ignoreFailures": true
                 }
